--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -192,7 +192,7 @@
         gap: 2vw;
         margin: 0 auto;
         margin-top: 20vh;
-
+        padding-bottom: 10vh;
         .SelectedPage_content_images {
 
 
@@ -236,7 +236,7 @@
 
 @media (max-width:600px) {
     .SelectedPage_content {
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
     }
 
     .SelectedPage_imageBlock_header {
