--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -170,7 +170,7 @@
                     transform: translateY(-110%);
                     color: white;
                     // -webkit-text-stroke: .04em black;
-
+                    overflow: hidden;
                    
                 }
 
