--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -1,11 +1,12 @@
 .sliderItem {
     position: relative;
     
+   
     .image {
         width: 40vmin;
         height: 56vmin;
         object-fit: cover;
-
+        border-radius: 5px;
         
         // max-height: 500px;
 
