--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -54,7 +54,7 @@
             }
 
             span {
-                cursor: pointer;
+                //cursor: pointer;
                 font-size: 20px;
 
                 animation: titleUp 1s ease-in-out;
