--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -42,6 +42,8 @@
         top: 0;
         z-index: 1;
         background: rgb(255, 255, 255);
+        overflow: hidden;
+        color:black
     }
 
     .SelectedPage_imageBlock_imageIdOnCenter {
@@ -130,6 +132,7 @@
             right: 20vw;
             align-items: center;
             gap: 10px;
+            z-index: 1;
 
             // background:blue;
             span {
@@ -163,19 +166,19 @@
 
             div {
                 overflow: hidden;
-               
+
                 h1,
                 h2,
                 h3 {
                     transform: translateY(-110%);
                     color: white;
                     // -webkit-text-stroke: .04em black;
-                    
-                   
+
+
                 }
 
 
-               
+
             }
 
 
