--- a/styles/sliderItem.scss
+++ b/styles/sliderItem.scss
@@ -1,13 +1,53 @@
 .sliderItem {
     position: relative;
-    // transform-style:preserve-3d ;
-   
+
+    &:hover {
+        .sliderItem_name {
+            width: 100%;
+
+            &::after {
+                width: 0%;
+            }
+        }
+    }
+
+    .sliderItem_name {
+        position: absolute;
+        top: 105%;
+        right: 0;
+        width: 0%;
+        overflow: hidden;
+        border-top: 2px solid white;
+        padding: 3% 0;
+        transition: width .5s;
+        display: flex;
+        justify-content: space-between;
+
+        &::after {
+            content: '';
+            width: 100%;
+            height: 10vmin;
+            background: white;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: width .5s;
+            transition-delay: .2s;
+        }
+
+        span {
+            color: white;
+            font-size: 1.2em;
+            white-space: nowrap;
+        }
+    }
+
     .image {
         width: 40vmin;
         height: 56vmin;
         object-fit: cover;
-        border-radius: 5px;
-        
+        // border-radius: 5px;
+
         // max-height: 500px;
 
         object-position: 0% 100%;
@@ -23,6 +63,10 @@
         &.blur {
             opacity: 0;
         }
+
+        // &:hover {
+        //     box-shadow:inset 0 0 0 10px rgb(24, 24, 24);
+        // }
     }
 
 
