--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -37,6 +37,7 @@
     .SelectedPage_scrollBlock {
 
         width: .5vmin;
+        height: 0px;
         position: absolute;
         left: 0;
         top: 0;
