--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,154 +1,167 @@
 .about {
-    background: rgb(0, 0, 0);
-    height: 100vh;
-    width: 100vw;
-    overflow-y: auto;
-    position: relative;
-    z-index: 1;
+  background: rgb(0, 0, 0);
+  height: 100vh;
+  width: 100vw;
+  overflow-y: auto;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20vmin;
+  padding-top: 20vmin;
+  gap: 10%;
+
+  &::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: white;
+    border: 5px solid rgb(0, 0, 0);
+    border-radius: 10px;
+  }
+
+  .about_container {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    padding-bottom: 20vmin;
-    padding-top: 20vmin;
-    gap: 10%;
+    justify-content: center;
+    margin: 0 auto;
+    height: auto;
+    gap: 3%;
 
-    &::-webkit-scrollbar {
-      width: 15px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: white;
-      border: 5px solid rgb(0, 0, 0);
-      border-radius: 10px;
-    }
-
-    .about_container {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin: 0 auto;
-      height: auto;
-      gap: 3%;
-
-      &.reverse {
-        flex-direction: row-reverse;
-
-        .about_image {
-          .img {
-            transform: translateX(120%);
-          }
-        }
-      }
+    &.reverse {
+      flex-direction: row-reverse;
 
       .about_image {
-        width: calc((1vw + 1vh)* 30);
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        position: relative;
-        overflow: hidden;
-
         .img {
-          width: 100%;
-          height: auto;
-          object-fit: contain;
-          transition: all 1s;
-          transform: translateX(-120%);
-        }
-
-        &.element-show .img {
-          transform: none;
+          transform: translateX(120%);
         }
       }
+    }
 
-      .about_content {
-        font-size: 1.5rem;
-        width: 45%;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        gap: 2vmin;
-        align-self: center;
-        justify-content: center;
-        min-height: 50vh;
+    .about_image {
+      width: calc((1vw + 1vh)* 30);
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      position: relative;
+      overflow: hidden;
 
-
-        .about_content_textBlock {
-          display: flex;
-          flex-wrap: wrap;
-          column-gap: 1vmin;
-
-          transform: translateX(100%);
-          transition: all 1s;
-
-        }
-
-
-        &.element-show .about_content_textBlock {
-          transform: none;
-        }
-
+      .img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+        transition: all 1s;
+        transform: translateX(-120%);
       }
 
-      &.reverse .about_content_textBlock {
-        transform: translateX(-100%);
+      &.element-show .img {
+        transform: none;
       }
+    }
+
+    .about_content {
+      font-size: 1.5rem;
+      width: 45%;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      gap: 2vmin;
+      align-self: center;
+      justify-content: center;
+      min-height: 50vh;
 
 
-      // .about_content {
-      //   position: absolute;
-      //   top: 20vmin;
-      //   right: 10%;
-      //   font-size: 20px;
-      //   width: 50%;
-      //   overflow: hidden;
-      //   display: flex;
-      //   flex-direction: column;
-      //   gap: 2vmin;
-      //   padding-bottom: 10vmin;
-
-      //   .about_content_textBlock {
-      //     display: flex;
-      //     flex-wrap: wrap;
-      //     column-gap: 1vmin;
-
-      //     &.ul::before {
-      //       // content: '-'
-      //     }
-      //   }
-
-      .about_content_textBlock_span {
+      .about_content_textBlock {
         display: flex;
         flex-wrap: wrap;
-        overflow: hidden;
+        column-gap: 1vmin;
+        line-height: 1.2;
+        transform: translateX(100%);
+        transition: all 1s;
 
-        .about_content_textBlock_span_text {
-          display: block;
-
-          // transform: translateY(-100%);
-
-          transition: all 1s .1s;
-
-          &.title {
-            color: white;
-            font-size: 30px;
-            // text-shadow: 2px 2px grey, 4px 4px red;
-            text-decoration: dashed;
-
-            padding: 0 5px;
-          }
-
-          &.uppercase {
-            text-transform: uppercase;
-          }
-
-
-        }
-
-        &.element-show .about_content_textBlock_span_text {
-          transform: none;
-        }
       }
 
 
+      &.element-show .about_content_textBlock {
+        transform: none;
+      }
+
     }
+
+    &.reverse .about_content_textBlock {
+      transform: translateX(-100%);
+    }
+
+
+    // .about_content {
+    //   position: absolute;
+    //   top: 20vmin;
+    //   right: 10%;
+    //   font-size: 20px;
+    //   width: 50%;
+    //   overflow: hidden;
+    //   display: flex;
+    //   flex-direction: column;
+    //   gap: 2vmin;
+    //   padding-bottom: 10vmin;
+
+    //   .about_content_textBlock {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     column-gap: 1vmin;
+
+    //     &.ul::before {
+    //       // content: '-'
+    //     }
+    //   }
+
+    .about_content_textBlock_text {
+      display: flex;
+      flex-wrap: wrap;
+      overflow: hidden;
+
+      strong {
+        color: var(--secondTextColor);
+        margin: 0 3px;
+      }
+
+      li {
+        &::before {
+          content: '--';
+          margin-right: 5px;
+          color: var(--secondTextColor)
+        }
+      }
+
+      // .about_content_textBlock_span_text {
+      //   // display: block;
+
+      //   // transform: translateY(-100%);
+
+      //   transition: all 1s .1s;
+
+      //   &.title {
+      //     color: white;
+      //     font-size: 30px;
+      //     // text-shadow: 2px 2px grey, 4px 4px red;
+      //     text-decoration: dashed;
+
+      //     padding: 0 5px;
+      //   }
+
+      //   &.uppercase {
+      //     text-transform: uppercase;
+      //   }
+
+
+      // }
+
+      &.element-show .about_content_textBlock_span_text {
+        transform: none;
+      }
+    }
+
+
   }
+}
