--- a/styles/slider_Item.scss
+++ b/styles/slider_Item.scss
@@ -1,7 +1,11 @@
 .sliderItem {
     position: relative;
+    opacity: .5;
+    transition: opacity .5s;
 
     &:hover {
+        opacity: 1;
+
         .sliderItem_name {
             width: 100%;
 
@@ -85,7 +89,7 @@
         .title {
             display: flex;
             justify-content: space-between;
-
+            padding: 0 5px;
             width: 80%;
             overflow: hidden;
 
@@ -100,25 +104,33 @@
             span {
                 //cursor: pointer;
                 font-size: 20px;
-
                 animation: titleUp 1s ease-in-out;
+                text-shadow: 5px 5px 3px var(--secondTextColor), 0px 0px 5px black
             }
 
             span:first-child,
             span:last-child {
-                // padding: 0 10px;
                 font-family: 'Times New Roman', Times, serif;
-
                 font-size: 40px;
+                font-weight: 900;
                 transition: all .5s;
+                text-shadow: 0 0 5px black;
+
             }
 
-            span:first-child:hover {
-                transform: rotate(45deg);
+            span:first-child {
+
+
+                &:hover {
+                    transform: rotate(45deg);
+                }
             }
 
-            span:last-child:hover {
-                transform: rotate(-45deg);
+            span:last-child {
+                &:hover {
+
+                    transform: rotate(-45deg);
+                }
             }
         }
     }
