--- a/styles/selectedPage.scss
+++ b/styles/selectedPage.scss
@@ -44,7 +44,7 @@
         z-index: 1;
         background: rgb(255, 255, 255);
         overflow: hidden;
-        color:black
+        color: black
     }
 
     .SelectedPage_imageBlock_imageIdOnCenter {
@@ -55,6 +55,8 @@
         right: 5vw;
         width: 5vw;
         z-index: 1;
+        // color: var(--secondTextColor);
+        text-shadow: 0 0 3px black;
     }
 
     .SelectedPage_imageBlock_back {
@@ -82,11 +84,8 @@
         height: 100%;
         width: 100%;
         overflow: hidden;
-
         // background-size: cover;
         // background-repeat: no-repeat;
-
-
         // object-fit: fill;
         // object-position: 50% 50%;
         // background: rgb(240, 15, 15);
@@ -98,8 +97,6 @@
             bottom: 0;
             right: 0;
             // z-index: 0;
-
-
             border: 200vw solid transparent;
             border-right: 200vw solid black;
             border-bottom: 200vw solid black;
@@ -122,7 +119,6 @@
                 border: 0vw solid transparent;
                 border-right: 0vw solid black;
                 border-bottom: 0vw solid black;
-
             }
         }
 
@@ -173,16 +169,10 @@
                 h3 {
                     transform: translateY(-110%);
                     color: white;
+                    text-shadow: 0 0 5px black;
                     // -webkit-text-stroke: .04em black;
-
-
                 }
-
-
-
             }
-
-
 
             &.active {
 
@@ -303,6 +293,3 @@
 
     }
 }
-
-
-
